--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.20",
+    "@next/third-parties": "^14.2.4",
+    "country-json": "^2.2.3",
+    "date-fns": "^3.6.0",
+    "next": "14.2.4",
     "react": "^18",
+    "react-datepicker": "^7.1.0",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
+    "daisyui": "^4.12.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
